--- a/Resources/Prototypes/Loadouts/Jobs/Medical/chief_medical_officer.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Medical/chief_medical_officer.yml
@@ -93,6 +93,16 @@
   equipment:
     outerClothing: ClothingOuterWinterCMO
 
+# Ears
+
+- type: itemLoadout # WD
+  id: CMOHeadset
+  equipment: CMOHeadset
+- type: startingGear
+  id: CMOHeadset
+  equipment:
+    ears: ClothingHeadsetCMO
+
 # PDA
 
 - type: itemLoadout # WD
