--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/janitor.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/janitor.yml
@@ -64,3 +64,13 @@
   id: JanitorWintercoat
   equipment:
     outerClothing: ClothingOuterWinterJani
+
+# PDA
+
+- type: itemLoadout # WD
+  id: JanitorPDA
+  equipment: JanitorPDA
+- type: startingGear
+  id: JanitorPDA
+  equipment:
+    id: JanitorPDA
