--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/librarian.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/librarian.yml
@@ -34,3 +34,13 @@
   id: CuratorJumpskirt
   equipment:
     jumpsuit: ClothingUniformJumpskirtCurator
+
+# PDA
+
+- type: itemLoadout # WD
+  id: LibrarianPDA
+  equipment: LibrarianPDA
+- type: startingGear
+  id: LibrarianPDA
+  equipment:
+    id: LibrarianPDA
