--- a/Resources/Prototypes/Loadouts/Jobs/Medical/common.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Medical/common.yml
@@ -7,3 +7,23 @@
   id: MedicalGlovesNitrile
   equipment:
     gloves: ClothingHandsGlovesNitrile
+
+# Ears
+
+- type: itemLoadout
+  id: MedicalHeadset
+  equipment: MedicalHeadset
+- type: startingGear
+  id: MedicalHeadset
+  equipment:
+    ears: ClothingHeadsetMedical
+
+# Mask
+
+- type: itemLoadout
+  id: MedicalMask
+  equipment: MedicalMask
+- type: startingGear
+  id: MedicalMask
+  equipment:
+    mask: ClothingMaskSterile
