--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/bolts.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/bolts.yml
@@ -26,3 +26,6 @@
         hard: false
         mask:
         - Opaque
+  - type: KnockdownOnCollide
+    behavior: AlwaysDrop
+  - type: BlurOnCollide
